--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "rubricate/markup",
+    "name": "rubricate/widget",
+    "description": "component to render an HTML",
     "authors": [
         {
             "name"  : "Estefanio N Santos",
@@ -7,11 +8,16 @@
         }
     ],
     "require": {
+        "php": "^7.1",
         "rubricate/element": "^0.4"
+    },
+    "support": {
+        "docs"   : "https://rubricate.github.io/components/widget",
+        "source" : "https://github.com/rubricate/widget"
     },
     "autoload": {
         "psr-4": {
-            "Rubricate\\Markup\\": "Rubricate/Markup/"
+            "Rubricate\\Markup\\": "Rubricate/Widget/"
         }
     }
 }
