--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Rubricate\\Markup\\": "Rubricate/Widget/"
+            "Rubricate\\Widget\\": "Rubricate/Widget/"
         }
     }
 }
